2013-06-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Actually create a new folder, local and remote.

2013-06-11 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	* ftpclient.h
	* AppController.m
	* AppController.h
	Change most method parameters from char* to NSString*.

2013-06-10 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Implement FTP rename RNFR RNTO

2013-06-09 Riccardo Mottola <rm@gnu.org>

	* GetNameController.h
	* GetNameController.m
	* AppController.m
        Rename setDescription to setMessage to avoid method clash

2013-06-07 Riccardo Mottola <rm@gnu.org>

	* GetNameController.m
	Load interface in init, not runAsModal

	* AppController.m
	Actually delete the file!

	* localclient.m
	Do not use working dir, but absolute path in the file element.

2013-06-07 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* GetNameController.h
	* GetNameController.m
	* GNUmakefile
	* Resources/GetName.gorm
	* Resources/FTP.gorm
	Local rename function.

2013-06-04 Riccardo Mottola <rm@gnu.org>

	* localclient.m
	Local rename function.

2013-06-04 Riccardo MOttola <rm@gnu.org>

	* client.h
	* client.m
	Renaming virtual method.

2013-06-01 Riccardo Mottola <rm@gnu.org>

	* AppController
	* localclient.m
	Fix memory leak.

2013-05-27 Riccardo Mottola <rm@gnu.org>

	* AppController.[h,m]
	Remove initialize.

2013-05-27 Riccardo Mottola <rm@gnu.org>

	* AppController.m (dropAction: paths:)
	Handle local file drop.

2013-05-22 Riccardo Mottola <rm@gnu.org>

	* AppController.m (performStoreFile)
	Also for button upload action, extract an array from the selectionand upload it.

2013-05-21 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	Upload dragged files.

2013-05-21 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* fileElement.h
	* fileElement.m
	* fileTable.m
	* ftpclient.m
	* localclient.m
	Give path and name accessors to FileElement, initialize it with full path when local.

2013-05-19 Riccardo Mottola <rm@gnu.org>
